--- a/app/src/main/res/layout/activity_device_list.xml
+++ b/app/src/main/res/layout/activity_device_list.xml
@@ -29,9 +29,9 @@
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="@color/black"
         android:layout_marginStart="10dp"
         android:layout_marginTop="3dp"
+        android:background="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -50,31 +50,31 @@
 
     <TextView
         android:id="@+id/txt"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:paddingStart="10dp"
+        android:paddingEnd="3dp"
         android:text="@string/available_devices"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/listAvailableDevices"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listPairedDevices" />
 
     <View
         android:id="@+id/view2"
         android:layout_width="0dp"
+        android:layout_height="1dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="3dp"
-        android:layout_height="1dp"
+        android:background="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/txt"
         app:layout_constraintStart_toStartOf="@+id/txt"
-        app:layout_constraintTop_toBottomOf="@+id/txt"
-        android:background="@color/black" />
+        app:layout_constraintTop_toBottomOf="@+id/txt" />
 
     <ListView
         android:id="@+id/listAvailableDevices"
@@ -85,7 +85,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt" />
+        app:layout_constraintTop_toBottomOf="@+id/txt"/>
 
-
+    <ProgressBar
+        android:id="@+id/btScanProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/listAvailableDevices"
+        app:layout_constraintEnd_toEndOf="@+id/listAvailableDevices"
+        app:layout_constraintStart_toStartOf="@+id/listAvailableDevices"
+        app:layout_constraintTop_toTopOf="@+id/listAvailableDevices" />
 </androidx.constraintlayout.widget.ConstraintLayout>
